okd-poc/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image","pause":"false"}]
  name: dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kertaaja-poc
  template:
    metadata:
      labels:
        app: kertaaja-poc
    spec:
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "16Mi"
              cpu: "10m"
