okd-poc/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: kertaaja-poc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
